# metamod-fwgs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CNAME  README.md
.github/workflows/: nightly-builds.yml
metamod/: CMakeLists.txt
metamod/extra/example/msvc/: example_plugin.vcxproj
metamod/include/engine/: eiface.h
metamod/msvc/: metamod.rc  metamod.vcxproj  metamod.vcxproj.filters
metamod/src/: api_info.h  callback_jit.cpp  callback_jit.h  commands_meta.cpp  dllapi.cpp  dllapi.h  dllapi_helper_macros.h  engine_api.cpp  engine_api.h  game_support.cpp  linkent.h  meta_api.h  metamod.cpp  metamod.h  mlist.cpp  mplugin.cpp  mutil.cpp  physint_dllapi.cpp  precompiled.h  sys_module.cpp  sys_module.h  utils.h
metamod/version/: appversion.bat  version.h
